# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "combo-banana"
version = "1.0.0"
description = "Your Customizable Image Workflow with Nano Banana."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["nano", "banana", "gemini", "gcp", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Designers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-logging>=3.12.1",
    "google-genai>=1.33.0",
    "gradio>=5.44.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
]

# LINKS

[project.urls]
Homepage = "https://github.com/fmind/nano-banana"
Documentation = "https://github.com/fmind/nano-banana/blob/main/README.md"
Repository = "https://github.com/fmind/nano-banana"
"Bug Tracker" = "https://github.com/fmind/nano-banana/issues"
Changelog = "https://github.com/fmind/nano-banana/blob/main/CHANGELOG.md"

# DEPENDENCIES

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "rust-just>=1.42.4",
    "ty>=0.0.1a20",
]

# TOOLS

[tool.uv]
package = false

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
invalid-type-form = "ignore"
possibly-unbound-attribute = "ignore"
